segunda aula css-labetube 01/06/2022

--- a/modulo1/css-labetube/paginaVideo1.html
+++ b/modulo1/css-labetube/paginaVideo1.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="paginaVideo1.css">
+    <title>Video Coelho</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container2">
+    <header>FutureTube <button>Buscar</button> </header>
+    <h1>Coelho</h1>
+    <video class="v1" src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4" controls></video>
+    <footer>Oi! Eu moro no footer!</footer>
+</div>
 
-    <h1>ola</h1>
-    
 </body>
-</html>
+</html> 
